# Agent

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  build.bat  build.config.json  setup-code-server.bat  start-dev.bat
.codebuddy/memory/: 2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  MEMORY.md
.codebuddy/plans/: IDE_持久化与主题同步_370a152d.md  agent-loop-refactor_b6737a9d.md
.codebuddy/skills/: market.json
.github/workflows/: release.yml
agent-desktop/: LICENSE  README.md  TECH_DEBT.md  TODO.md  branding.json  build-frontend.bat  build.bat  build.config.json  index.html  package-lock.json  package.json  pet.html  setup-code-server.bat  tsconfig.json  vite.config.ts
agent-desktop/docs/: PATH_CONVENTIONS.md
agent-desktop/scripts/: download-code-server.mjs  download-windows-mcp.mjs  gen-bear-icon.mjs  gen-icon.bat  install-companion.mjs  release.bat  sync-branding.mjs
agent-desktop/src/: App.tsx  main.tsx
agent-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
agent-desktop/src-tauri/.cargo/: config.toml
agent-desktop/src-tauri/capabilities/: default.json
agent-desktop/src-tauri/icons/: icon.icns
agent-desktop/src-tauri/scripts/: ide-titlebar.js
agent-desktop/src-tauri/src/: agent_loop.rs  browser.rs  code_server.rs  error_codes.rs  ide.rs  lib.rs  main.rs  mcp.rs  pet.rs  plugins.rs  rag.rs  rag_parser.rs  sandbox.rs  skills.rs  tools.rs  types.rs  vscode_bridge.rs
agent-desktop/src-tauri/src/code_server/: commands.rs  mod.rs  paths.rs  process.rs  theme.rs  types.rs
agent-desktop/src-tauri/src/mcp/: client.rs  manager.rs  market.rs  mod.rs  types.rs
agent-desktop/src/lib/: sse.ts  (+3 more)
kinvoice/app/: config.py  main.py
other_resources/: prompt.md
reference/: learning-roadmap.md
reference/agent-loop/: README.md  concurrent_agent.py  concurrent_agent_async.py  my_agent_loop.annotated.py  my_agent_loop.py
scripts/: download-code-server.mjs  download-code-server.ps1  gen-bear-icon.mjs  gen-icon.bat  release.bat  sync-branding.mjs
votek-companion/: .vscodeignore  package.json  tsconfig.json
votek-companion/src/: extension.ts  handlers.ts  protocol.ts  server.ts
(+78 files in other folders)
