[package]
name = "agent-desktop"
version = "0.1.0"
description = "A Desktop AI Agent"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
http = "1"
url = "2"
mime_guess = "2"
