[package]
name = "agent-desktop"
version = "0.1.0"
description = "A Desktop AI Agent"
authors = ["you"]
edition = "2021"

[lib]
name = "agent_desktop_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "unstable"] }
tauri-plugin-shell = "2"  
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
zip = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures = "0.3"
url = "2"
dirs-next = "2"
rand = "0.8"

# RAG — 向量检索
lancedb = "0.16"
arrow = "53"
arrow-array = "53"
arrow-schema = "53"

# RAG — 本地嵌入推理（首次自动下载模型，约 47MB）
fastembed = "5"

# RAG — 语义分块（递归字符→词→句边界，非滑动窗口）
text-splitter = "0.32"

# ==============================
# 编译优化配置
# ==============================

[profile.release]
opt-level = "s"           # 体积优先（桌面应用更看重包大小）
lto = "fat"               # 跨 crate 全局链接时优化
codegen-units = 1         # 单编译单元，最大化内联与去重
panic = "abort"           # panic 直接终止，减小 unwind 表体积
strip = "symbols"         # 移除符号表，大幅减小编译产物

# 开发模式也做轻度优化（平衡编译速度与运行时性能）
[profile.dev]
opt-level = 1             # 轻度优化，编译速度影响不大但运行时快很多
debug = 1                 # 保留行号级别的调试信息
strip = "none"
